# rust_course_polkadot

./: .gitignore  Cargo.toml  README.md
Final/: Cargo.toml
Final/csv/: viviendas.csv
Final/src/: main.rs  presentacion.rs
Final/src/entidad/: mod.rs  tipo_vivienda.rs  vivienda.rs  vivienda_dao.rs
L01_02/src/: control_flow.rs  main.rs
L01_02/tests/: if1.rs  if2.rs  variables1.rs  variables2.rs  variables3.rs  variables4.rs  variables5.rs
L03/tests/: functions1.rs  functions2.rs  functions3.rs  functions4.rs  functions5.rs  lifetimes1.rs  lifetimes2.rs
L04/tests/: enums1.rs
L06/: Cargo.toml
L06/src/: app_with_custom_lib.rs  external_mod.rs  gui_test.rs  main.rs  modules.rs  super_and_self.rs  use_clause.rs
L06/tests/: modules1.rs  modules2.rs  modules3.rs
L07/: Cargo.toml
L07/src/: generic_bound.rs  generic_functions.rs  generic_simple.rs  lib.rs  main.rs  test_assert.rs  trait_example.rs  trait_example_lib.rs  traits.rs
L07/tests/: generics1.rs  traits1.rs  traits2.rs  traits3.rs  traits4.rs  traits5.rs
L08/: Cargo.toml
L08/src/: entidad.rs  main.rs  presentacion.rs
