[package]
name = "l06"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name="mycustomcrate"
path="src/lib.rs"

[[bin]]
name = "myapp"
path = "src/bin/bin.rs" # replace bin.rs with name of your file

[dependencies]
fltk = "^1.3"
fltk-table = "0.2.1"